# cix

./: .gitignore  BRANCHES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  catalog.html  docs.html  ethos.html  index.html  library.html  pyproject.toml
ci-lab/: README.md  pyproject.toml
ci-lab/cep-001/: PLAN-task-based-probes.md  analyze_phase1.py  experiment.yaml  graders.py  proposal.md  status.md  validate_graders.py
ci-lab/cep-001-rigor/: experiment.yaml  proposal.md
ci-lab/cep-001-rigor/cases/: interval-merging.md
ci-lab/cep-001/corpus/: conv-001-auth-duckdb.md  conv-002-rate-limiting.md  conv-003-embedding-model.md  conv-004-hexagonal-ports.md  conv-005-ci-lab-naming.md  conv-006-reranking-bug.md  conv-007-svelte-runes.md  conv-008-trail-architecture.md  export.json  seed.py
ci-lab/cep-001/results/: summary-20260301T012754Z.json  summary-20260301T012810Z.json  summary-20260301T014447Z.json  summary-20260301T014647Z.json  summary-20260305T142715Z.json  summary-20260305T142845Z.json  summary-20260305T144253Z.json  summary-20260306T082856Z.json  summary-20260306T084324Z.json  summary-20260306T101623Z.json  summary-20260307T031542Z.json  summary-20260307T071001Z.json  summary-20260307T071631Z.json  summary-20260307T072200Z.json  summary-20260307T073012Z.json  summary-20260307T073413Z.json  summary-20260307T073808Z.json  summary-20260307T074131Z.json  summary-20260307T075143Z.json  summary-20260307T080416Z.json  summary-20260307T081252Z.json  summary-20260308T091553Z.json  summary-20260308T093127Z.json  summary-20260308T095421Z.json  summary-20260308T095453Z.json  summary-20260308T095625Z.json  summary-20260310T094810Z.json  summary-20260310T102227Z.json  summary-20260310T102257Z.json  summary-20260310T102657Z.json  summary-20260310T141143Z.json  summary-latest.json
ci-lab/cep-001/subjects/: help-only.md  help-plus-agent-skill.md  skill-at-tool.md
ci-lab/cep-001/subjects/archive-nexus/: reference.md  skill.md
ci-lab/cep-001/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md
ci-lab/cep-001/tasks/archive/: boundary-001.md  boundary-002.md  boundary-003.md  boundary-004.md  boundary-005.md  boundary-006.md  boundary-007.md  boundary-008.md  boundary-009.md  boundary-010.md
ci-lab/cep-001/tasks/archive-command-selection/: dk-001.md  dk-002.md  dk-003.md  dk-004.md  dk-005.md  ds-001.md  ds-002.md  ds-003.md  ds-004.md  ds-005.md  neg-001.md  neg-002.md  neg-003.md  neg-004.md  qd-001.md  qd-002.md  qd-003.md  qd-004.md  qd-005.md  sc-001.md  sc-002.md  sc-003.md  sc-004.md  sc-005.md  ts-001.md  ts-002.md  ts-003.md  ts-004.md  ts-005.md  tt-001.md  tt-002.md  tt-003.md  tt-004.md  tt-005.md
ci-lab/cep-001/tasks/archive-nexus/: el-001.md  el-002.md  el-003.md  el-004.md  el-005.md  es-001.md  es-002.md  es-003.md  es-004.md  es-005.md  et-001.md  et-002.md  et-003.md  et-004.md  et-005.md  lt-001.md  lt-002.md  lt-003.md  lt-004.md  lt-005.md  neg-001.md  neg-002.md  neg-003.md  neg-004.md  tc-001.md  tc-002.md  tc-003.md  tc-004.md  tc-005.md
ci-lab/cep-001/tasks/archive-prose-probes/: out-001.md  out-002.md  out-003.md  out-004.md  out-005.md  out-006.md
ci-lab/cep-002-mandates/: experiment.yaml  proposal.md
ci-lab/cep-002-mandates/cases/: safe-calculator.md
ci-lab/cep-002-mandates/results/: summary-20260226T131008Z.json  summary-20260226T132907Z.json
ci-lab/cep-002-mandates/subjects/: 01-baseline.md  02-full-autonomy.md  03-motivation.md  04-principle-guided.md  05-mandate-template.md  06-highly-structured.md
ci-lab/humaneval/: experiment.yaml
ci-lab/humaneval/cases/: humaneval-000.md  humaneval-001.md  humaneval-002.md
ci-lab/marketplace/skill-activation/: experiment.yaml
ci-lab/marketplace/skill-activation/cases/: must-002.md  must-006.md  must-008.md  must-010.md  must-014.md  must-015.md  not-004.md  not-005.md  not-009.md
ci-lab/marketplace/skill-activation/results/: summary-20260213T124741Z.json  summary-20260216T114513Z.json  summary-20260218T230658Z.json
ci-lab/marketplace/skill-activation/subjects/: all-skills-menu.md  build-eval.md
ci-lab/marketplace/skill-vs-help/: experiment.yaml
ci-lab/rep-001-rigor/: experiment.yaml
ci-lab/rep-001-rigor/cases/: text-justify.md
ci-lab/rep-002-mandates/: experiment.yaml
ci-lab/rep-002-mandates/cases/: astropy-13033.md  astropy-13398.md  safe-calculator.md
ci-lab/skill-activation/: experiment.yaml
ci-lab/skill-activation/cases/: edge-001.md  edge-002.md  edge-003.md  must-001.md  must-003.md  must-004.md  must-005.md  must-007.md  must-009.md  must-011.md  must-012.md  must-013.md  not-001.md  not-002.md  not-003.md  not-006.md  not-007.md  not-008.md  not-010.md
ci-lab/skill-activation/results/: summary-20260211T091242Z.json  summary-20260213T115341Z.json  summary-20260213T132648Z.json  summary-20260220T040641Z.json  trials.jsonl
ci-lab/skill-activation/tasks/: must-001.md  must-002.md  not-001.md  not-002.md
tools/assay/: README.md  pyproject.toml
tools/cix/: CLAUDE.md  README.md  pyproject.toml
tools/cix/tests/: __init__.py  conftest.py  test_models.py  test_skill.py  test_use_cases.py
tools/ix/: README.md  pyproject.toml
tools/ix/docs/: index.md
tools/ix/tests/: conftest.py
tools/matrix/: README.md  pyproject.toml
tools/matrix/docs/: index.md
tools/matrix/tests/: conftest.py  matrix_helpers.py  test_claude_runtime.py  test_compiler.py  test_config.py  test_container.py  test_orchestrator.py  test_orchestrator_tracing.py  test_registry.py  test_scheduler.py  test_types.py
tools/memex/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
tools/memex/tests/: __init__.py  conftest.py  test_api.py  test_corpus.py  test_daemon.py  test_excavation_service.py  test_models.py  test_plaintext_adapter.py  test_reranker.py  test_settings.py  test_source_adapters.py
tools/recon/: README.md  pyproject.toml
tools/recon/.claude-plugin/: plugin.json
tools/recon/tests/: test_api_collector.py  test_cli_collector.py  test_integration.py  test_models.py  test_recon.py  test_transforms.py  test_web_collector.py
(+2463 files in other folders)
