[project]
name = "cix-workspace"
version = "0.1.0"
description = "Collaborative Intelligence Extensions - A marketplace for cognitive extensions that enhance rather than replace human capability"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["extensions/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
