[project]
name = "ci-lab"
version = "0.1.0"
description = "Experiment workspace — CEPs, marketplace evals, and experiment assets"
requires-python = ">=3.12"
dependencies = [
    "ix",
]

[tool.uv.sources]
ix = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_lab"]
