[project]
name = "assay"
version = "0.1.0"
description = "Cross-family verification — independent voices test claims against sources, reconciled into queryable verdicts."
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yashodeep Vyas", email = "yza.vyas@gmail.com" }
]

dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
assay = "assay.adapters._in.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assay"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/assay/**/*.py",
    "src/assay/configs/*.yaml",
    "src/assay/assets/**/*.md",
    "src/assay/assets/**/*.yaml",
    "src/assay/assets/**/*.jsonl",
]
