[project]
name = "cix"
version = "0.1.0"
description = "Collaborative Intelligence Extensions CLI - Discover, install, and manage cognitive extensions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yashodeep Vyas", email = "yza.vyas@gmail.com" }
]

dependencies = [
    "rich-click>=1.8",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cix = "cix.adapters._in.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cix"]

# Include skill.md files as package data
[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/cix/**/*.py",
    "src/cix/**/*.md",
]
