[project]
name = "matrix"
version = "0.1.0"
description = "Matrix — kind-agnostic DAG orchestration engine"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yashodeep Vyas", email = "yza.vyas@gmail.com" }
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "opentelemetry-sdk>=1.20"]
claude = ["claude-agent-sdk>=0.1"]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrix"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/matrix/**/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
