[project]
name = "memex"
version = "0.2.1"
description = "Extended memory for you and your agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yashodeep Vyas", email = "yza.vyas@gmail.com" }
]

dependencies = [
    "duckdb>=1.0",
    "rich-click>=1.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "fastembed>=0.4",
    "ijson>=3.2",
    "pytz>=2024.1",  # Required by DuckDB for timezone handling
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
memex = "memex.adapters._in.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memex"]

# Include skill.md files as package data
[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/memex/**/*.py",
    "src/memex/**/*.md",
]
