[project]
name = "recon"
version = "0.1.0"
description = "Paper scout — search, download, convert as matrix components"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Yashodeep Vyas", email = "yza.vyas@gmail.com" }
]

dependencies = [
    "matrix",
    "semanticscholar>=0.8",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "duckduckgo-search>=8.1.1",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
recon = "recon.adapters._in.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recon"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/recon/**/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
